<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_file"
        android:title="@string/menu_file">
        <menu>
            <item
                android:id="@+id/menu_newfile"
                android:title="@string/menu_newfile">
            </item>
            <item
                android:id="@+id/menu_open"
                android:title="@string/menu_open">
            </item>
            <item
                android:id="@+id/menu_save"
                android:title="@string/menu_save">
            </item>
            <item
                android:id="@+id/menu_saveas"
                android:title="@string/menu_save_as">
            </item>
            <item
                android:id="@+id/menu_discard"
                android:title="@string/menu_discard">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/menu_setting"
        android:title="@string/menu_setting">
        <menu>
            <item
                android:id="@+id/menu_select_compiler"
                android:title="@string/menu_select_compiler">
            </item>
            <item
                android:id="@+id/menu_save_folder"
                android:title="@string/menu_save_folder">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/menu_define"
        android:title="@string/menu_define">
        <menu>
            <item
                android:id="@+id/menu_fav"
                android:title="@string/menu_fav">
            </item>
            <item
                android:id="@+id/menu_hdr"
                android:title="@string/menu_hdr">
            </item>
            <item
                android:id="@+id/menu_cmd"
                android:title="@string/menu_cmd">
            </item>
            <item
                android:id="@+id/menu_import"
                android:title="@string/menu_import">
            </item>
            <item
                android:id="@+id/menu_export"
                android:title="@string/menu_export">
            </item>
            <item
                android:id="@+id/menu_reset"
                android:title="@string/menu_reset">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/menu_font"
        android:title="@string/menu_font">
        <menu>
            <item
                android:id="@+id/menu_font_small"
                android:title="@string/menu_font_small">
            </item>
            <item
                android:id="@+id/menu_font_normal"
                android:title="@string/menu_font_normal">
            </item>
            <item
                android:id="@+id/menu_font_large"
                android:title="@string/menu_font_large">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/menu_compile"
        android:title="@string/menu_compile">
    </item>
    <item
        android:id="@+id/menu_keyboard"
        android:title="@string/menu_keyboard">
    </item>
    <item
        android:id="@+id/menu_changelog"
        android:title="@string/menu_changelog">
    </item>
    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_mmlref">
    </item>

</menu>